# ctf_ros2_ws

./: .dockerignore  .gitignore  .storage-manifest.yaml  Dockerfile  Dockerfile.tst  README.md  build.sh  context.md  docker-compose.yml  down.sh  plan.md  requirements_marl_ctf.txt  up.sh
docker/: entrypoint.sh
src/: readme.md
src/ctf_game_server/: acl-2.pgm  acl.yaml  acl_graph.pkl  acl_graph_doorway.pkl  acl_graph_editor.ipynb  acl_merged.pgm  acl_merged.yaml  package.xml  setup.cfg  setup.py
src/ctf_game_server/config/: params.yaml
src/ctf_game_server/ctf_game_server/: customCTF.py  game_server.py  game_server_nmn_backup.py  publish_boxes.py  publish_dummy_graph.py  publish_obs.py
src/ctf_game_server/launch/: game_server.launch.py  game_server_sim.launch.py
src/ctf_game_server/rviz/: ctf_rviz_config.rviz  ctf_rviz_config_post.rviz  ctf_sim.rviz
src/ctf_msgs/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/ctf_msgs/msg/: JoinGameMessage.msg  ServerToRoverMessage.msg
src/ctf_msgs/srv/: JoinGame.srv
src/ctf_rover/: package.xml  setup.cfg  setup.py
src/ctf_rover/config/: params_blue_0.yaml  params_blue_1.yaml  params_red_0.yaml  params_red_1.yaml
src/ctf_rover/ctf_rover/: customCTF.py  gen_graph_maps.ipynb  gen_graph_maps_copy.ipynb  global_to_local_goal.py  graph_generator.py  graph_policy.py  publish_global_goal.py  publish_real_graph.py  rover_node.py
src/ctf_rover/tmux/: run_hw_red_rover_ctf.py  tmux_ctf_launch.yaml
